pull image from docker registry
