# internal/api/http/hook/model.go
@@ -1,0 +1,7 @@
+package http
+
+type ApiResponse struct {
+	Status  string `json:"status"` // success | fail
+	Message string `json:"message,omitempty"`
+	Data    any    `json:"data,omitempty"`
+}
